tests/diagnostics/packages/import_usage/imported_type_method_arity_mismatch/expect.txt
# exit: 1
lib.coppice:5:21: error: expected 1 arguments, got 0
      return user.plus()
                      ^
